[metadata]
name = micro-mates-controller
version = 1.0.0
author = Breadboard Mates
author_email = developers@breadboardmates.com
description = A MicroPython Library developed to be used with Mates Studio Commander and Architect Environments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BreadBoardMates/MicroPython-Mates-Controller
project_urls =
    Bug Tracker = https://github.com/BreadBoardMates/MicroPython-Mates-Controller/issues
classifiers =
    Programming Language :: Python :: Implementation :: MicroPython
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src